--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -12,6 +12,8 @@ djangorestframework = "^3.14.0"
 django-cors-headers = "^4.3.1"
 pillow = "^10.1.0"
 djangorestframework-simplejwt = "^5.3.1"
+django-environ = "^0.11.2"
+psycopg = {extras = ["binary"], version = "^3.1.18"}
 
 
 [build-system]
