--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,11 +1,14 @@
 asgiref==3.7.2 ; python_version >= "3.9" and python_version < "4.0"
 django-cors-headers==4.3.1 ; python_version >= "3.9" and python_version < "4.0"
+django-environ==0.11.2 ; python_version >= "3.9" and python_version < "4"
 django==4.2.10 ; python_version >= "3.9" and python_version < "4.0"
 djangorestframework-simplejwt==5.3.1 ; python_version >= "3.9" and python_version < "4.0"
 djangorestframework==3.14.0 ; python_version >= "3.9" and python_version < "4.0"
 pillow==10.2.0 ; python_version >= "3.9" and python_version < "4.0"
+psycopg-binary==3.1.18 ; implementation_name != "pypy" and python_version >= "3.9" and python_version < "4.0"
+psycopg[binary]==3.1.18 ; python_version >= "3.9" and python_version < "4.0"
 pyjwt==2.8.0 ; python_version >= "3.9" and python_version < "4.0"
 pytz==2024.1 ; python_version >= "3.9" and python_version < "4.0"
 sqlparse==0.4.4 ; python_version >= "3.9" and python_version < "4.0"
-typing-extensions==4.9.0 ; python_version >= "3.9" and python_version < "3.11"
+typing-extensions==4.9.0 ; python_version >= "3.9" and python_version < "4.0"
 tzdata==2023.4 ; python_version >= "3.9" and python_version < "4.0" and sys_platform == "win32"
