fix: Fixed vercel routes

--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -23,7 +23,7 @@
       },
       {
         "src": "/(.*)",
-        "dest": "puddle/wsgi.py"
+        "dest": "backend/wsgi.py"
       }
     ]
   }
