--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,24 @@ poetry/core/*
 db.sqlite3
 
 resources/
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
